fix: menu collapse

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,7 +9,7 @@ body {
 
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.2s ease;
 }
 
 .fade-enter-from,
@@ -34,5 +34,5 @@ body {
 
 .slide-left-enter-active,
 .slide-left-leave-active {
-  transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 0.2s ease;
 }
